fixed submenu text not being left aligned

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -118,6 +118,7 @@
     display: inline-block;
     margin: 0;
     float: left;
+    text-align: left;
 
     li {
       display: inline-block;
