--- a/style.css
+++ b/style.css
@@ -879,6 +879,7 @@ li.pingback {
     display: inline-block;
     margin: 0;
     float: left;
+    text-align: left;
   }
   .menu-primary li {
     display: inline-block;
